package org.example.padroescriacao.factorymethod;

public interface IServico {
    String executar();
    String cancelar();
    Double getValorServico();
}
